# ma_netease_cloud_music

./: .gitignore  .gitmodules  DOCKER_RESTART.md  Dockerfile.ma  INSTALL.md  INSTALL_DOCKER.md  QUICK_CHECK.md  README.md  TROUBLESHOOTING.md  check_provider.sh  docker-compose.example.yml  manifest.json  pyproject.toml  setup.py
ma_provider/: README.md
ma_provider/netease_metadata_provider/: __init__.py  manifest.json
ma_provider/netease_provider/: __init__.py  manifest.json  netease_metadata_provider.py
netease_provider/: __init__.py  provider.py
umc_server/: .dockerignore  Dockerfile  README.md  api-server.js
